--- a/01-todos/index.html
+++ b/01-todos/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="todos.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 
 <body>
-    <form class="inputclass">
+    <form class="inputclass row">
         <input class="todos" placeholder="What needs to be done?">
     </form>
     <div id="tasks">
@@ -25,7 +25,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-    <script src="todos.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
